--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,14 @@ packages = ["trading_framework"]
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[project.optional-dependencies]
+dev = [
+    "black==25.1.0"
+    "isort==6.0.1"
+    "flake8==7.3.0"
+    "mypy==1.17.0"
+    "pre-commit==4.2.0"
+    "pytest==8.4.1"
+    "pytest-cov==6.2.1"
+]
