Installation of pip-tools + pyproject update + Requirement-lock

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "loguru==0.7.3",
     "joblib==1.5.1",
     "alpaca-trade-api==3.2.0",
-    "python-dotenv==1.1.1"
+    "python-dotenv==1.1.1",
+    "pip-tools==7.4.1"
 ]
 
 [tool.setuptools]
