Installation of pip autoremove + pyproject corrected

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,7 @@ dependencies = [
     "loguru==0.7.3",
     "joblib==1.5.1",
     "alpaca-trade-api==3.2.0",
-    "python-dotenv==1.1.1",
-    "pip-tools==7.4.1"
+    "python-dotenv==1.1.1"
 ]
 
 [tool.setuptools]
@@ -35,5 +34,7 @@ dev = [
     "mypy==1.17.0",
     "pre-commit==4.2.0",
     "pytest==8.4.1",
-    "pytest-cov==6.2.1"
+    "pytest-cov==6.2.1",
+    "pip-tools==7.4.1",
+    "pip-autoremove==0.10.0"
 ]
