--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with: {python-version: "3.13"}
-      - run: python -m pip install -r requirements-dev.txt
+      - run: pip install .[dev]
       - run: python -m pip install .
       - run: pytest -q
