--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,45 @@
-name: tests
-on: [push, pull_request]
+name: CI
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
-  build:
+  ci:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: {python-version: "3.13"}
-      - run: pip install .[dev]
-      - run: python -m pip install .
-      - run: pytest -q
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+
+      - name: Install dependencies (prod + dev)
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          pip install .[dev]
+
+      - name: Check formatting with Black
+        run: |
+          black --check src tests
+
+      - name: Check import order with isort
+        run: |
+          isort --check-only src tests
+
+      - name: Lint with Flake8
+        run: |
+          flake8 src tests
+
+      - name: Type check with Mypy
+        run: |
+          mypy src tests
+
+      - name: Run tests with coverage
+        run: |
+          pytest --maxfail=1 --disable-warnings --cov=trading_framework --cov-report=term-missing -q
