--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python 3.13
+      - name: Setup Python 3.13
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
@@ -24,22 +23,26 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel
           pip install .[dev]
 
-      - name: Check formatting with Black
+      - name: Security audit (pip-audit)
         run: |
-          black --check src tests
+          pip install pip-audit
+          pip-audit --fail-on high
+
+      - name: Check formatting with Black
+        run: black --check src tests
 
       - name: Check import order with isort
-        run: |
-          isort --check-only src tests
+        run: isort --check-only src tests
 
       - name: Lint with Flake8
-        run: |
-          flake8 src tests
+        run: flake8 src tests
 
       - name: Type check with Mypy
-        run: |
-          mypy src tests
+        run: mypy src tests
 
       - name: Run tests with coverage
         run: |
-          pytest --maxfail=1 --disable-warnings --cov=trading_framework --cov-report=term-missing -q
+          pytest --maxfail=1 --disable-warnings \
+            --cov=trading_framework --cov-report=term-missing \
+            --cov-fail-under=85 -q
+
