--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,9 @@
 name = "trading-framework"
 version = "0.1.0"
 description = "Framework modulaire pour trading algorithmique avec Alpaca"
-authors = [{ name = "Richard BROUQUIER" }]
+authors = [{ name = "Richard BROUQUIER", email = "brouquier57@gmail.com" }]
+readme = "README.md"
+license = { text = "MIT" }
 requires-python = ">=3.13"
 
 dependencies = [
