--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,5 +38,6 @@ dev = [
     "pytest==8.4.1",
     "pytest-cov==6.2.1",
     "pip-tools==7.4.1",
-    "pip-autoremove==0.10.0"
+    "pip-autoremove==0.10.0",
+    "bump2version==1.0.1"
 ]
