--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,11 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          pytest --maxfail=1 --disable-warnings \
-            --cov=trading_framework --cov-report=term-missing \
+          pytest \
+            --maxfail=1 \
+            --disable-warnings \
+            --cov=trading_framework \
+            --cov-source=src/trading_framework \
+            --cov-report=term-missing \
             --cov-fail-under=85 -q
 
