--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,9 @@ dev = [
     "pip-tools==7.4.1",
     "pip-autoremove==0.10.0",
     "bump2version==1.0.1",
-    "pip-audit==2.9.0"
+    "pip-audit==2.9.0",
+    "mkdocs==1.6.1",
+    "mkdocs-material==9.6.15"
 ]
 
 [project.scripts]
