--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,33 +17,28 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-lock.txt') }}
 
       - name: Install dependencies (prod + dev)
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install .[dev]
+          python -m pip install --upgrade pip
+          pip install -e .[dev]
 
-      - name: Security audit (pip-audit)
-        run: |
-          pip install pip-audit
+      - name: Lint with ruff
+        run: ruff .
 
-      - name: Check formatting with Black
-        run: black --check src tests
-
-      - name: Check import order with isort
-        run: isort --check-only src tests
-
-      - name: Lint with Flake8
-        run: flake8 src tests
-
-      - name: Type check with Mypy
-        run: mypy src tests
+      - name: Type check with mypy
+        run: mypy src/trading_framework
 
       - name: Run tests with coverage
-        run: |
-          pytest \
-            --maxfail=1 \
-            --disable-warnings \
-            --cov=trading_framework \
-            --cov-report=term-missing \
-            --cov-fail-under=85 -q
+        run: pytest --cov=src --cov-report=xml
+
+      - name: Upload coverage to Codecov
+        if: github.event_name != 'pull_request'
+        uses: codecov/codecov-action@v3
+        with:
+          files: coverage.xml
