--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,13 +36,25 @@ replace = 'version = "{new_version}"'
 search = '__version__ = "{current_version}"'
 replace = '__version__ = "{new_version}"'
 
-[tool.ruff]
-select = ["E","F","I","N","UP"]
-line-length = 79
-
 [tool.black]
 line-length = 79       # ou 100, 120… selon votre préférence
 target-version = ['py311']
+
+[tool.isort]
+profile = "black"         # pour une intégration cohérente si vous utilisez aussi Black
+line_length = 79         # choisissez la longueur max souhaitée
+multi_line_output = 3
+include_trailing_comma = true
+
+[tool.flake8]
+max-line-length = 79
+extend-ignore = E203, W503   # pour éviter les conflits Black-style
+exclude = 
+    .git,
+    __pycache__,
+    build,
+    dist,
+    .venv
 
 [tool.mypy]
 strict = true
