--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,9 +2,8 @@ repos:
   - repo: https://github.com/psf/black
     rev: 25.1.0
     hooks: [{id: black}]
-  - repo: https://github.com/PyCQA/isort
-    rev: 6.0.1
-    hooks: [{id: isort}]
-  - repo: https://github.com/PyCQA/flake8
-    rev: 7.3.0
-    hooks: [{id: flake8}]
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.12.4
+    hooks:
+      - id: ruff
+        args: [--fix]
