--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,10 +38,6 @@ replace = 'version = "{new_version}"'
 search  = '__version__ = "{current_version}"'
 replace = '__version__ = "{new_version}"'
 
-[tool.black]
-line-length = 79
-target-version = ['py311']
-
 [tool.ruff]
 line-length = 79
 exclude = ["__pycache__", "build", "dist", ".venv", ".git"]
@@ -49,6 +45,9 @@ exclude = ["__pycache__", "build", "dist", ".venv", ".git"]
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B", "C"]
 extend-ignore = ["E203"]
+
+[tool.ruff.format]
+quote-style = "double"
 
 [tool.mypy]
 ignore_missing_imports = true
