--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,11 @@ license = { text = "MIT" }
 requires-python = ">=3.13"
 
 dependencies = [
-    "pandas==2.3.1",
-    "numpy==2.3.1",
-    "loguru==0.7.3",
-    "alpaca-trade-api==3.2.0",
-    "python-dotenv==1.1.1"
+  "pandas>=2.3,<3",
+  "numpy>=2.3,<3",
+  "loguru>=0.7,<1",
+  "alpaca-trade-api>=3.2,<4",
+  "python-dotenv>=1.1,<2"
 ]
 
 [project.optional-dependencies]
