--- a/.editorconfig
+++ b/.editorconfig
@@ -11,5 +11,11 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.py]
-max_line_length = 79
+[*.{yml,yaml,json}]
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = true
+
+[Makefile]
+indent_style = tab
+trim_trailing_whitespace = false
