--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,34 +11,49 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Setup Python 3.13
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
+
       - name: Cache pip
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-lock.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-      - name: Install dependencies (prod + dev)
+      - name: Cache Ruff cache
+        uses: actions/cache@v3
+        with:
+          path: .ruff_cache
+          key: ${{ runner.os }}-ruff-${{ hashFiles('**/*.py') }}
+          restore-keys: |
+            ${{ runner.os }}-ruff-
+
+      - name: Install prod dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[dev]
+          pip install -r requirements-lock.txt
 
-      - name: Fix issues with Ruff
+      - name: Install dev dependencies
+        run: pip install -e .[dev]
+
+      - name: Fix formatting with Ruff
         run: ruff format .
 
       - name: Verify linting with Ruff
         run: ruff check .
 
-      - name: Type check with mypy
-        run: mypy src/trading_framework
+      - name: Type-check with MyPy
+        run: python -m mypy src/trading_framework --strict
 
       - name: Run tests with coverage
-        run: pytest --cov=src --cov-report=xml
+        run: python -m pytest --cov=src --cov-report=xml
 
       - name: Upload coverage to Codecov
         if: github.event_name != 'pull_request'
