--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,5 @@ repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.12.4
     hooks:
-      - id: ruff-format       # formateur unique
+      - id: ruff-format       # format
       - id: ruff-check        # lint
-
-# Supprime complètement le bloc psf/black
