--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Trading Framework
-site_url: https://RBrouq.github.io/trading-framework  # optionnel, pour GitHub Pages
+site_url: https://RBrouq.github.io/trading-framework
 docs_dir: docs
 nav:
   - Home: index.md
@@ -14,7 +14,7 @@ nav:
   - API: api/
   
 theme:
-  name: material      # si tu as installé mkdocs-material
+  name: material
   palette:
     primary: 'indigo'
     accent: 'indigo'
