--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,11 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.13"
 
+[project.urls]
+homepage      = "https://github.com/RBrouq/trading-framework"
+repository    = "https://github.com/RBrouq/trading-framework"
+documentation = "https://RBrouq.github.io/trading-framework/"
+
 [project.classifiers]
 classifiers = [
     "Programming Language :: Python :: 3",
