--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
 dependencies = [
     "pandas>=2.3,<3",
     "numpy>=2.3,<3",
+    "pandera>=,0.26<1",
     "loguru>=0.7,<1",
     "alpaca-trade-api>=3.2,<4",
     "python-dotenv>=1.1,<2"
