--- a/.env.exemple
+++ b/.env.exemple
@@ -1,3 +1,3 @@
-APCA_API_KEY_ID=xxxxx
-APCA_API_SECRET_KEY=xxxxx
+ALPACA_API_KEY=xxxxx
+ALPACA_SECRET_KEY=xxxxx
 APCA_API_BASE_URL=https://paper-api.alpaca.markets
